--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - pip install -r requirements.txt
+      - pip3 install -r requirements.txt
 
   build:
     commands:
